# DotSpot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  blindsighted.code-workspace
.claude/: settings.local.json
.github/workflows/: manual-build.yml  pr-checks.yml  release.yml
agents/: .env.example  .gitignore  README.md  __init__.py  config.py  example_agent.py  pyproject.toml
api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  models.py
api/clients/: elevenlabs.py  openrouter.py
api/routers/: preview.py  sessions.py
api/services/: lk.py
app/: .env.example  .gitignore  metro.config.js
ios/: Config.xcconfig.example  README.md
ios/.claude/: settings.local.json
ios/Blindsighted/: BlindsightedApp.swift  Info.plist
ios/Blindsighted.xcodeproj/: project.pbxproj
ios/Blindsighted/Utils/: AudioManager.swift  DotSpotAudioManager.swift  LiveKitConfig.swift  LiveKitManager.swift  ObjectDetector.swift  SpeechManager.swift
ios/Blindsighted/ViewModels/: StreamSessionViewModel.swift
ios/Blindsighted/Views/: LiveKitSettingsView.swift  MainAppView.swift  StreamSessionView.swift  StreamView.swift
ios/DotSpot/: DotSpotApp.swift  Info.plist
ios/DotSpot.xcodeproj/: project.pbxproj
ios/DotSpot/Utils/: APIClient.swift  AudioCaptureManager.swift  AudioManager.swift  HapticManager.swift  InputSourceManager.swift  LifelogSyncManager.swift  LiveKitConfig.swift  LocalObjectDetector.swift  LocationManager.swift  ObjectTracker.swift  VideoFileManager.swift  (+5 more)
ios/DotSpotTests/: DotSpotTests.swift
server/: detection_server.py  requirements.txt
(+36 files in other folders)
