[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blindsighted-agents"
version = "0.1.0"
description = "LiveKit agents for Blindsighted vision assistance"
requires-python = ">=3.11"
dependencies = [
    "livekit==1.0.23",
    "livekit-agents[openai,silero,deepgram,turn-detector,elevenlabs]~=1.0",
    "loguru==0.7.3",
    "pydantic-settings==2.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
